--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -27,6 +27,6 @@ jobs:
         name: Build and push nginx image
         uses: docker/build-push-action@v2
         with:
-          context: ./docker/images/nginx
+          context: .
           push: true
           tags: docker.pkg.github.com/${{ github.repository_owner }}/build-test/build-test:latest
