--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -17,7 +17,7 @@ jobs:
         name: Login to GitHub Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: false
-          tags: docker.pkg.github.com/${{ github.repository_owner }}/build-test/build-test:latest
+          tags: ghcr.io/${{ github.repository_owner }}/build-test/build-test:latest
