--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -28,5 +28,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
+          push: true
           tags: ghcr.io/${{ github.repository_owner }}/build-test/build-test:latest
