--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/build-test/build-test:latest
+          tags: ghcr.io/${{ github.repository_owner }}/build-test:latest
